RESOLVED FIXED74703
[Qt][WK2] Fix the build for newer Qt5
https://bugs.webkit.org/show_bug.cgi?id=74703
Summary [Qt][WK2] Fix the build for newer Qt5
Csaba Osztrogonác
Reported 2011-12-16 03:18:50 PST
I updated Qt5 today morning to ba3ed7b92c87e318904a279a2fea7e9e6c00cfb8, but unfortunately I can't build WebKit trunk with it. Until I got a proper buildfix for WebKit trunk, I can't update Qt5 on the buildbot. I got the following error because of refactoring QTouchEvent: /home/oszi/WebKit/Tools/DumpRenderTree/qt/EventSenderQt.cpp: In member function 'void EventSender::sendTouchEvent(QEvent::Type)': /home/oszi/WebKit/Tools/DumpRenderTree/qt/EventSenderQt.cpp:483: error: no matching function for call to 'QTouchEvent::QTouchEvent(QEvent::Type&, QTouchEvent::DeviceType, Qt::KeyboardModifiers&)' /usr/local/Trolltech/Qt5/Qt-5.0.0-r16/include/QtGui/qevent.h:773: note: candidates are: QTouchEvent::QTouchEvent(QEvent::Type, QTouchDevice*, Qt::KeyboardModifiers, Qt::TouchPointStates, const QList<QTouchEvent::TouchPoint>&) /usr/local/Trolltech/Qt5/Qt-5.0.0-r16/include/QtGui/qevent.h:691: note: QTouchEvent::QTouchEvent(const QTouchEvent&) See http://lists.qt-project.org/pipermail/development/2011-December/000802.html and https://qt.gitorious.org/qt/qtbase/commit/4222603f8ea3a0d0ef5b9a190605ad86e00f27f6/diffs for details. Before this fail I had to apply a little fix because of a missing include: diff --git a/Tools/QtTestBrowser/launcherwindow.h b/Tools/QtTestBrowser/launcherwindow.h index b5609c5..801146e 100644 --- a/Tools/QtTestBrowser/launcherwindow.h +++ b/Tools/QtTestBrowser/launcherwindow.h @@ -47,6 +47,10 @@ #include <QtUiTools/QUiLoader> #endif +#ifndef QT_NO_LINEEDIT +#include <QtWidgets/QLineEdit> +#endif + #include <QDebug> #include <cstdio>
Attachments
Patch (5.22 KB, patch)
2011-12-16 04:19 PST, Simon Hausmann
no flags
Simon Hausmann
Comment 1 2011-12-16 04:19:17 PST
Csaba Osztrogonác
Comment 2 2011-12-16 05:59:46 PST
Comment on attachment 119599 [details] Patch Thanks for the quick fix, r=me. I'll land it when updating the Qt5 on the bot.
Csaba Osztrogonác
Comment 3 2011-12-16 06:00:02 PST
Note You need to log in before you can comment on or make changes to this bug.