[Qt] Fix the build for newer Qt5 https://bugs.webkit.org/show_bug.cgi?id=74703

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2011-12-16
Reviewed by Csaba Osztrogonác.

* QtTestBrowser/launcherwindow.h: Add missing forward declaration.
* DumpRenderTree/qt/EventSenderQt.cpp:
(EventSender::sendTouchEvent): Allocate QTouchDevice and use with QTouchEvent constructor.
* WebKitTestRunner/qt/EventSenderProxyQt.cpp: Ditto.
(WTR::EventSenderProxy::sendTouchEvent):
* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::sendTouchEvent): Ditto.
(MiniBrowserApplication::notify): Adapt to changed API for marking primary touch point.

Canonical link: https://commits.webkit.org/91424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103060 268f45cc-cd09-0410-ab3c-d52691b4dbfc